[gd_scene load_steps=2 format=3 uid="uid://dk3sfo7uvng5a"]

[ext_resource type="Script" uid="uid://bte02qkps1wid" path="res://scenes/room_popup.gd" id="1_xiklm"]

[node name="RoomPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_xiklm")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.27450982)

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -180.0
offset_right = 320.0
offset_bottom = 180.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.27450982)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
bbcode_enabled = true
text = "[font_size=32]Room Name"
scroll_active = false

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DescLabel" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "description"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Pioneers with a higher stat of what the room needs will make it work more efficiently."

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
bbcode_enabled = true
text = "[font_size=16]EFFICIENCY:"
fit_content = true
scroll_active = false

[node name="ProgressBar" type="ProgressBar" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 15.0
step = 1.0
value = 5.0
show_percentage = false

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer/ProgressBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[font_size=16]"
scroll_active = false

[node name="RightScreen" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TabContainer" type="TabContainer" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/RightScreen"]
layout_mode = 2
size_flags_vertical = 3

[node name="CloseButton" type="Button" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/RightScreen"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Close"

[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/RightScreen/CloseButton" to="." method="_on_button_pressed"]
